<resources>
    <string name="app_name">淘常州</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_frame_ag">淘常州</string>
    <string name="index_search">搜索</string>
    <string name="index_search_hint">请输入搜索关键字</string>
    <string name="index_edit_hint">输入关键字</string>
    <string name="more">更多</string>
    <string name="shop">购物</string>
    <string name="life">生活</string>
    <string name="scenic">景点门票</string>
    <string name="hotel">酒店预订</string>
    <string name="conser">家政预约</string>
    <string name="takeout">外卖</string>
    <string name="intmall">积分商城</string>
    <string name="login_accname">用户名：</string>
    <string name="login_password">密码：</string>
    <string name="login_savepassword">记住密码</string>
    <string name="login_forgetpassword">忘记密码?</string>
    <string name="taomoney">淘心卡余额：</string>
    <string name="taomyinfo">我的淘常州</string>
    <string name="myinfo_order">我的订单</string>
    <string name="myinfo_gold">我的淘心币</string>
    <string name="myinfo_coupon">我的优惠券</string>
    <string name="myinfo_message">我的短消息</string>
    <string name="myinfo_address">收获地址管理</string>
    <string name="head_login">登录淘常州</string>
    <string name="head_reg">用户注册</string>
    <string name="login_reg">注册</string>
    <string name="login_login">登录</string>
    <string name="more_nullify">注销</string>
    <string name="more_accset">账户设置</string>
    <string name="more_about">关于</string>
    <string name="more_help">帮助</string>
    <string name="reg_secpassword">确认密码：</string>
    <string name="reg_phone">手机号：</string>
    <string name="reg_visblepassword">显示密码</string>
    <string name="reg_reg">立即注册</string>
    <string name="com_getvercode">获取验证码</string>
    <string name="com_vercode">验证码：</string>
    <string name="com_newpassword">新密码：</string>
    <string name="com_submit">提交</string>
    <string name="hint_accname">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_secpassword">请输入确认密码</string>
    <string name="hint_vercode">请输入验证码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_newpassword">请输入新密码</string>
    <string name="head_getpassword">获取密码</string>
    <string name="head_consignee_address">收货地址管理</string>
    <string name="consignee_consignee">收货人：</string>
    <string name="consignee_mobilephone">手机：</string>
    <string name="consignee_telphone">固定电话：</string>
    <string name="consignee_area">地区：</string>
    <string name="consignee_address">详细地址：</string>
    <string name="consignee_default">默认</string>
    <string name="consignee_modify">修改</string>
    <string name="consignee_new">新增</string>
    <string name="cart_my">我的购物车</string>
    <string name="cart_productnum">数量：</string>
    <string name="cart_balance">去结算</string>
    <string name="cart_totalprice">总价：</string>
    <string name="periheral">周边</string>
    <string name="periheral_position">重新定位</string>
    <string name="peripheral_res">美食</string>
    <string name="peripheral_snack">小吃快餐</string>
    <string name="peripheral_coffer">咖啡厅</string>
    <string name="peripheral_massage">夜总会</string>
    <string name="peripheral_bar">洗浴按摩</string>
    <string name="peripheral_club">酒吧</string>
    <string name="peripheral_ktv">KTV</string>
    <string name="businesslist_map">地图模式</string>
    <string name="businessmap_guidance">地图导航</string>
    <string name="businessmap_near">附近商家</string>
    <string name="businessmap_hint">找商户、地址</string>
    <string name="businesslist_list">列表模式</string>
    <string name="businesslist_result">为您找到的商户</string>
    <string name="businesslist_product_result">为您找到的商品</string>
    <string name="businesslist_spi_scope">选择搜索半径</string>
    <string name="businesslist_spi_type">类别选择</string>
    <string name="businesslist_spi_sort">排序方式</string>
    <string name="businesslist_searchhint">招商户,地址</string>
    <string name="shopping_rdb_peple">人气</string>
    <string name="shopping_rdb_price">价格</string>
    <string name="shopping_rdb_sale">销量</string>
    <string name="shopping_btn_category">分类</string>
    <string name="shopping_btn_business">商圈</string>
    <string name="shopping_btn_select">筛选</string>
    <string name="life_rdb_sale">销量</string>
    <string name="life_rdb_price">价格</string>
    <string name="life_rdb_peple">好评</string>
    <string name="life_btn_category">分类</string>
    <string name="life_btn_business">商圈</string>
    <string name="life_btn_select">筛选</string>
    <string name="consignee_setdefault">设为默认</string>
    <string name="head_newconsignee">新增收货地址</string>
    <string name="head_modifyconsignee">修改收货地址</string>
    <string name="head_modifypassword">修改密码</string>
    <string name="modifypassword_password">原密码：</string>
    <string name="hint_modifypassword_password">请输入原密码</string>
    <string name="shake_text">试试看,摇晃您的手机</string>
    <string name="head_mechantsinfo">商家详情</string>
    <string name="mechantsinfo_person_consume">人均消费：</string>
    <string name="mechantsinfo_traffic">交通</string>
    <string name="mechantsinfo_landmark">地标</string>
    <string name="mechantsinfo_peripheral">周边商户</string>
    <string name="favorite_delete">删除</string>
    <string name="sysmenu_attention">我的关注</string>
    <string name="sysmenu_exit">退出</string>
    <string name="sysmenu_favorite">收藏夹</string>
    <string name="sysmenu_feedback">意见反馈</string>
    <string name="sysmenu_login">登录/注册</string>
    <string name="sysmenu_setting">设置</string>
    <string name="sysmenu_share">软件分享</string>
    <string name="sysmenu_update">检查更新</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="systemprompt">系统提示</string>
    <string name="exitsystem">退出程序</string>
    <string name="exittaocz">确定离开淘常州客户端？</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_type">反馈类型：</string>
    <string name="feedback_content">反馈内容：</string>
    <string name="feedback_phone">联系方式：</string>
    <string name="feedback_phone_hit">您的姓名、手机号、邮箱等</string>
    <string name="update_title">有新版本，是否更新？</string>
    <string name="head_softsetup">软件设置</string>
    <string name="sysset_comset">通用设置</string>
    <string name="sysset_cleancache">清除缓存</string>
    <string name="sysset_include1">包括数据、图片等</string>
    <string name="sysset_pushnotification">推送通知设置</string>
    <string name="sysset_notice1">启动自动通知服务</string>
    <string name="sysset_notice2">启动物流通知</string>
    <string name="sysset_notice3">促销通知</string>
    <string name="sysset_notice4">即时接受</string>
    <string name="sysset_notice5">铃声</string>
    <string name="sysset_notice6">振动</string>
    <string name="sysset_small_notice1">接收时间9:00—-21:00</string>
    <string name="sysset_small_notice2">接收订单物流通知</string>
    <string name="sysset_small_notice3">接收促销活动及系统公告通知</string>
    <string name="sysset_small_notice4">不启动客户端仍然自动通知</string>
    <string name="sysset_small_notice5">通知时铃声提醒</string>
    <string name="sysset_small_notice6">通知时振动提醒</string>
    <string name="life_content">服务展示</string>
    <string name="life_details">服务详情</string>
    <string name="life_comment">用户评论</string>
    <string name="life_businessinfo">商家信息</string>
    <string name="service">服务</string>
    <string name="environment">环境</string>
    <string name="pricecost">性价比</string>
    <string name="match">描述相符</string>
    <string name="service2">服务态度</string>
    <string name="life_renjun">人\t\t\t均：</string>
    <string name="life_leixing">类\t\t\t型：</string>
    <string name="life_fengwei">氛\t\t\t围：</string>
    <string name="life_tese">特\t\t\t色：</string>
    <string name="life_tuijian">推\t\t\t荐：</string>
    <string name="money_symbols">￥</string>
    <string name="service_reservation">填写服务预约单</string>
    <string name="ser_hint1">请输入姓名(必填)</string>
    <string name="ser_hint2">联系电话(必填)</string>
    <string name="ser_hint3">其他联系电话(可填)</string>
    <string name="ser_hint4">您希望的大概价位</string>
    <string name="ser_area">您所需服务的区域</string>
    <string name="ser_hint5">您所需服务的小区</string>
    <string name="ser_hint6">您的详细地址(必填)</string>
    <string name="ser_date">服务日期和时间</string>
    <string name="ser_needs">其他服务要求</string>
    <string name="ser_emergency">紧急程度</string>
    <string name="ser_rewrite">重填</string>
    <string name="ser_sex">性别</string>
    <string name="com_price">元</string>
    <string name="ser_man">男</string>
    <string name="ser_woman">女</string>
    <string name="ser_generally">一般</string>
    <string name="ser_urgency">紧急</string>
    <string name="head_filtration">筛选</string>
    <string name="filtration_text1">支持货到付款</string>
    <string name="filtration_text2">有优惠</string>
    <string name="filtration_text3">最低价格</string>
    <string name="filtration_text4">最高价格</string>
    <string name="comment">用户评论</string>
    <string name="head_allbusinessgroup">全部商圈</string>
    <string name="city_titile">选择城市</string>
    <string name="city_search_hint">在此搜索您要入住的城市</string>
    <string name="life_oldprice">原价：￥</string>
    <string name="head_hotelsearch">酒店查询</string>
    <string name="hotelsearch_city">入住城市</string>
    <string name="hotelsearch_side">身边酒店</string>
    <string name="hotelsearch_dlt_cityname">常州</string>
    <string name="hotelsearch_hotel_occupancy">入住时间</string>
    <string name="hotelsearch_hotel_leave">离店日期</string>
    <string name="hotelsearch_hotel_address">酒店名称/地址</string>
    <string name="hotelsearch_hotel_search">立即查询</string>
    <string name="calendargotoday">回到今天</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="head_scenic">全部分类</string>
    <string name="scenic_city">景点所属于城市：</string>
    <string name="scenic_category">景点所属于类别：</string>
    <string name="head_sceniclist_city">景点城市</string>
    <string name="head_sceniclist_category">景点类别</string>
    <string name="head_sceniclist">景点列表</string>
    <string name="com_buy">立即购买</string>
    <string name="com_collection">收藏服务</string>
    <string name="buyover">已售：</string>
    <string name="com_addcart">加入购物车</string>
    <string name="com_procollection">收藏商品 </string>
    <string name="proinfo_tejia_price">特价 </string>
    <string name="proinfo_tejia_gotocart">查看购物车 </string>
    <string name="proinfo_yufei_price">运费：￥</string>
    <string name="proinfo_productinfo">商品详情</string>
    <string name="proinfo_youhui">店铺优惠</string>
    <string name="proinfo_content">商品展示</string>
    <string name="proinfo_miaoshu">描述相符</string>
    <string name="hotelsearchlistmap">地图</string>
    <string name="about_text1">淘常州手机客户端Android版</string>
    <string name="about_text2">©2012 常州买东西网络科技有限公司</string>
    <string name="about_text3">如果您对淘常州的产品有任何的疑问，或者对我们的服务有任何的意见和建议，欢迎 直接与我们联络，我们将竭诚为您服务。</string>
    <string name="about_text4">订购热线：400-678-0519</string>
    <string name="about_text5">客服QQ:4006768758</string>
    <string name="about_text6">常州买东西网络科技有限公司</string>
    <string name="about_text7">copyright©2010-2014</string>
    <string name="ccb_pay_brand">淘常州建行支付页面</string>
    <string name="ccb_pay_merchantname">商户名称:　 </string>
    <string name="ccb_pay_orderidnum">订单号:　 </string>
    <string name="ccb_pay_orderpay">支付订单</string>
    <string name="ccb_pay_payment">付款金额:　 </string>
    <string name="ccb_pay_accountpayinfo">账号支付:　 </string>
    <string name="ccb_pay_mbankpay">手机银行支付:　 </string>
    <string name="ccb_pay_openValue">Y</string>
    <string name="ccb_pay_closeValue">N</string>
    <string name="head_yhhdbaoming">优惠活动报名</string>
    <string name="yhhdbaoming_text2">优惠活动信息</string>
    <string name="back">返回</string>
    <string name="btnGetUsrInfo">获取用户信息</string>
    <string name="btnSendMsg">发送文字微博</string>
    <string name="btnSendMsgWithPic">发送带图的文字微博</string>
    <string name="textResponse">返回信息：</string>
</resources>