<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.wjwl.mobile.taocz.widget.TczV3_HeadLayout
        android:id="@+id/hl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="320dip"
        android:layout_height="120dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:background="@drawable/about_logo" />

    <TextView
        style="@style/text14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:text="@string/about_text3"
        android:textColor="@color/text333333" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:paddingBottom="20dip" >

        <TextView
            style="@style/text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text4"
            android:textColor="@color/text333333" />

        <TextView
            style="@style/text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:text="@string/about_text5"
            android:textColor="@color/text333333" />

        <TextView
            style="@style/text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:text="@string/about_text6"
            android:textColor="@color/text333333" />

        <TextView
            style="@style/text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:text="@string/about_text7"
            android:textColor="@color/text333333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/bg_frame_gray"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                style="@style/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text1"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/line_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+about/version"
                style="@style/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/line_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:orientation="vertical" >

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text2"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>