<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dip"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_exit_gray"
    android:padding="2dip"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="34dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_exit_head" >

        <TextView
            android:id="@+exit/title"
            style="@style/headtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/exitsystem"
            android:textColor="@color/black" />
    </RelativeLayout>

    <TextView
        android:id="@+exit/msg"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:text="@string/exittaocz"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+exit/bt_cancel"
            style="@style/bt_text"
            android:layout_width="0dp"
            android:layout_height="32dip"
            android:layout_weight="1"
            android:background="@drawable/btn_update"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+exit/bt_submit"
            style="@style/bt_text"
            android:layout_width="0dp"
            android:layout_height="32dip"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/btn_exit"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>