<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:background="@drawable/head_redandorg" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:text="@string/hotelsearchlistmap"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+business_map/back"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/head_left"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:text="@string/back"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:background="@drawable/bg_index2"
        android:contentDescription="@string/app_name" />

    <com.baidu.mapapi.MapView
        android:id="@+business_map/map_View"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

</LinearLayout>