<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/AllBg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:background="@drawable/head_redandorg" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:text="@string/head_yhhdbaoming"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+yhhdbaoming/back"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/head_left"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:text="@string/back"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:background="@drawable/bg_index2"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/bg_frame_gray"
        android:orientation="vertical" >

        <TextView
            style="@style/text18"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/yhhdbaoming_text2"
            android:textColor="@color/merchantsinfo_text1" />

        <ImageView
            android:id="@+reg/line1"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/line_gray" />

        <ListView
            android:id="@+yhhdbaoming/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/line_gray"
            android:fadingEdge="none"
            android:scrollbars="none"
            android:scrollingCache="false" >
        </ListView>
    </LinearLayout>

</LinearLayout>